<resources>
    <string name="app_name">Stonks</string>
    <string name="title_home">Watch List</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_info">info</string>

    <!--Detail View-->
    <string name="detail_operating_cash_flow">Current Operating Cash Flow</string>
    <string name="detail_total_debt">Total Debt (Short + Long Term Debt)</string>
    <string name="detail_investment">Cash and Short Term Investment</string>
    <string name="detail_outstanding_share">No. of Shares Outstanding</string>
    <string name="detail_last_close">Last Close</string>
    <string name="detail_cash_flow_Yr_1_5">Cash flow growth rate (Yr 1–5)</string>
    <string name="detail_cash_flow_Yr_5_10">Cash flow growth rate (Yr 5–10)</string>
    <string name="detail_cash_flow_Yr_11_20">Cash flow growth rate (Yr 11–20)</string>
    <string name="detail_discount_rate">Discount Rate</string>
    <string name="detail_final_value">Final Intrinsic Value Per Share</string>
    <string name="detail_overvalue">Overvalue</string>
    <string name="detail_undervalue">Undervalue</string>
    <string name="detail_dummy_number">$10,000 m</string>

    <string name="loading_error">Cannot execute search. Please check your internet connection</string>
    <string name="stock_data_symbol_placeholder">TSLA</string>
    <string name="stock_data_placeholder_price">700</string>
    <string name="stock_data_placeholder_intrinsic_value">350</string>
    <string name="stock_data_placeholder_over_under_valued">+50%</string>


    <string name="title_disclaimer">Disclaimer</string>
    <string name="value_disclaimer">This app is not meant to be your financial adviser. Please and be mindful when you use this app and take the information on the app with a grain of salt as the  discounted cash flow method of calculating intrinsic value is an estimate and does not represent the true value of a company.</string>
    <string name="title_note">Note</string>
    <string name="note">** The discounted cash flow method of calculating intrinsic value of a company can only be used if the company has a consistent increase in cash flow from operations. So, you may find that some companies may show insufficient data when calculating intrinsic value.</string>
</resources>