<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginTop="52dp"
        android:text="@string/title_disclaimer"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/value_disclaimer"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/text_notifications"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/text_notifications"
        app:layout_constraintTop_toBottomOf="@+id/text_notifications" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/note"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/title_note"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>