<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/card_border">

        <TextView
            android:id="@+id/tvSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_data_symbol_placeholder"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
            app:layout_constraintEnd_toStartOf="@+id/tvPrice"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvPrice" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:padding="12sp"

            android:text="@string/stock_data_placeholder_price"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvIntrinsicValue"
            app:layout_constraintEnd_toStartOf="@+id/tvIntrinsicValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSymbol"
            app:layout_constraintTop_toTopOf="@+id/tvIntrinsicValue" />

        <TextView
            android:id="@+id/tvIntrinsicValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:padding="12sp"
            android:text="@string/stock_data_placeholder_intrinsic_value"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvOverUnderValued"
            app:layout_constraintEnd_toStartOf="@+id/tvOverUnderValued"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPrice"
            app:layout_constraintTop_toTopOf="@+id/tvOverUnderValued" />

        <TextView
            android:id="@+id/tvOverUnderValued"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:padding="12sp"
            android:text="@string/stock_data_placeholder_over_under_valued"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvIntrinsicValue"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
