<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ProgressBar
        android:id="@+id/spinner_pb"
        android:layout_width="86dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:layout_gravity="top|center_horizontal"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity.StockDetailActivity">

        <Button
            android:id="@+id/btnAddToWatchList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:text="Add to Watch List"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_op_cashflow_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:text="@string/detail_operating_cash_flow"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/symbol_tv" />

        <TextView
            android:id="@+id/value_op_cashflow_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/detail_dummy_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_op_cashflow_tv"
            app:layout_constraintStart_toEndOf="@+id/title_op_cashflow_tv"
            app:layout_constraintTop_toTopOf="@+id/title_op_cashflow_tv"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/title_investment_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/detail_investment"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_debt_tv" />

        <TextView
            android:id="@+id/value_investment_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_dummy_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_investment_tv"
            app:layout_constraintEnd_toEndOf="@+id/value_debt_tv"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/value_debt_tv"
            app:layout_constraintTop_toTopOf="@+id/title_investment_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title_num_share_tv"
            android:layout_width="100dp"
            android:layout_height="31dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/detail_outstanding_share"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/value_num_share_tv"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_investment_tv" />

        <TextView
            android:id="@+id/value_num_share_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_dummy_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_num_share_tv"
            app:layout_constraintEnd_toEndOf="@+id/value_investment_tv"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/value_investment_tv"
            app:layout_constraintTop_toTopOf="@+id/title_num_share_tv"
            app:layout_constraintVertical_bias="0.466" />

        <TextView
            android:id="@+id/title_growth_rate_1_5_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/detail_cash_flow_Yr_1_5"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_op_cashflow_tv"
            app:layout_constraintEnd_toStartOf="@+id/value_growth_rate_1_5_tv"
            app:layout_constraintTop_toTopOf="@+id/title_op_cashflow_tv"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/value_growth_rate_1_5_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/detail_dummy_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_growth_rate_1_5_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_growth_rate_1_5_tv"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/title_growth_rate_5_10_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_cash_flow_Yr_5_10"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_debt_tv"
            app:layout_constraintEnd_toEndOf="@+id/title_growth_rate_1_5_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_growth_rate_1_5_tv"
            app:layout_constraintTop_toTopOf="@+id/title_debt_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title_debt_tv"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/detail_total_debt"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_op_cashflow_tv" />

        <TextView
            android:id="@+id/value_debt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_dummy_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_debt_tv"
            app:layout_constraintEnd_toEndOf="@+id/value_op_cashflow_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/value_op_cashflow_tv"
            app:layout_constraintTop_toTopOf="@+id/title_debt_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/value_growth_rate_5_10_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_dummy_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_growth_rate_5_10_tv"
            app:layout_constraintEnd_toEndOf="@+id/value_growth_rate_1_5_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/value_growth_rate_1_5_tv"
            app:layout_constraintTop_toTopOf="@+id/title_growth_rate_5_10_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title_growth_rate_11_20_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_cash_flow_Yr_11_20"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_investment_tv"
            app:layout_constraintEnd_toEndOf="@+id/title_growth_rate_5_10_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_growth_rate_5_10_tv"
            app:layout_constraintTop_toTopOf="@+id/title_investment_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/value_growth_rate_11_20_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_dummy_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_growth_rate_11_20_tv"
            app:layout_constraintEnd_toEndOf="@+id/value_growth_rate_5_10_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/value_growth_rate_5_10_tv"
            app:layout_constraintTop_toTopOf="@+id/title_growth_rate_11_20_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title_discount_rate_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_discount_rate"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_num_share_tv"
            app:layout_constraintEnd_toEndOf="@+id/title_growth_rate_11_20_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_growth_rate_11_20_tv"
            app:layout_constraintTop_toTopOf="@+id/title_num_share_tv"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/title_last_close_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="28dp"
            android:text="@string/detail_last_close"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_num_share_tv" />

        <TextView
            android:id="@+id/value_discount_rate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_dummy_number"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_discount_rate_tv"
            app:layout_constraintEnd_toEndOf="@+id/value_growth_rate_11_20_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/value_growth_rate_11_20_tv"
            app:layout_constraintTop_toTopOf="@+id/title_discount_rate_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/value_last_close_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:text="@string/detail_dummy_number"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_last_close_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_last_close_tv"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/title_intrinsic_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/detail_final_value"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/value_last_close_tv"
            app:layout_constraintStart_toStartOf="@+id/title_last_close_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_last_close_tv" />

        <TextView
            android:id="@+id/title_verdict_overvalue_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/detail_overvalue"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/title_intrinsic_tv"
            app:layout_constraintStart_toStartOf="@+id/title_intrinsic_tv"
            app:layout_constraintTop_toBottomOf="@+id/value_intrinsic_tv" />

        <TextView
            android:id="@+id/title_verdict_undervalue_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/detail_undervalue"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/title_intrinsic_tv"
            app:layout_constraintStart_toStartOf="@+id/title_intrinsic_tv"
            app:layout_constraintTop_toBottomOf="@+id/value_intrinsic_tv" />

        <TextView
            android:id="@+id/value_intrinsic_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/detail_dummy_number"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/title_intrinsic_tv"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="@+id/title_intrinsic_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_intrinsic_tv" />

        <TextView
            android:id="@+id/red_value_verdict_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/detail_dummy_number"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/title_verdict_overvalue_tv"
            app:layout_constraintStart_toStartOf="@+id/title_verdict_overvalue_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_verdict_overvalue_tv" />

        <TextView
            android:id="@+id/green_value_verdict_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/detail_dummy_number"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/title_verdict_overvalue_tv"
            app:layout_constraintStart_toStartOf="@+id/title_verdict_overvalue_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_verdict_overvalue_tv" />
        <TextView
            android:id="@+id/value_verdict_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/detail_dummy_number"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/title_verdict_overvalue_tv"
            app:layout_constraintStart_toStartOf="@+id/title_verdict_overvalue_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_verdict_overvalue_tv" />
        <TextView
            android:id="@+id/symbol_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="AMZN"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>


